@@ -1,0 +1,1 @@
+org.apache.cayenne.project.ProjectModuleProvider
